Added topic detial table,controller,routes,vaidation and parser
